# Financial-Data-Fetcher

./: .env.example  .gitignore  .gitlab-ci.yml  MANIFEST.in  Makefile  PROJECT_STRUCTURE.md  README.md  pyproject.toml  quickstart.py  requirements-dev.txt  requirements.txt  run.bat  setup.py  tox.ini
.github/workflows/: ci-cd.yml  update-data.yml
data/: README.md
docs/: index.html
scripts/: clean.py  example.py  fetch_data_github.py  generate_html_report.py
src/: __init__.py  config.py  dashboard.py  financial_data_fetcher.py  scheduler.py  utils.py
src/financial_data_fetcher/: __init__.py  config.py  dashboard.py  financial_data_fetcher.py  scheduler.py  utils.py
tests/: test_financial_data_fetcher.py  test_integration.py
