[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "financial-data-fetcher"
version = "1.0.0"
description = "A Python package for fetching and analyzing financial data"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"},
]
maintainers = [
    {name = "Your Name", email = "your.email@example.com"},
]
keywords = ["finance", "data", "fetcher", "dashboard", "analysis"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Financial and Insurance Industry",
    "Topic :: Office/Business :: Financial",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "requests>=2.25.0",
    "pandas>=1.3.0",
    "numpy>=1.21.0",
    "matplotlib>=3.4.0",
    "seaborn>=0.11.0",
    "plotly>=5.0.0",
    "yfinance>=0.1.70",
    "fredapi>=0.5.0",
    "python-dotenv>=0.19.0",
    "schedule>=1.1.0",
    "jinja2>=3.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "black>=21.0",
    "flake8>=3.9",
    "mypy>=0.910",
    "coverage>=6.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/financial-data-fetcher"
Documentation = "https://github.com/yourusername/financial-data-fetcher/blob/main/README.md"
Repository = "https://github.com/yourusername/financial-data-fetcher"
Issues = "https://github.com/yourusername/financial-data-fetcher/issues"

[project.scripts]
financial-data-fetcher = "financial_data_fetcher.example:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["financial_data_fetcher*"]
exclude = ["tests*", "docs*", "build*", "dist*"]

[tool.setuptools.package-data]
financial_data_fetcher = ["*.yml", "*.yaml", "*.json", "*.txt", "*.md"]

[tool.setuptools.package-dir]
"" = "src"

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short --strict-markers"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
]
